# HumanTracker-MobileHumanPose_ONNX_CXX

./: .gitignore  1.csv  CMakeLists.txt  CMakeLists.txt.example  HumanTracker copy.cpp  HumanTracker.cpp  HumanTracker.h  Joints_Name  Joints_Name.csv  PoseDetector.cpp  PoseDetector.h  README.md  main.cpp  main.py  mobileHumanPose copy.cpp  mobileHumanPose.cpp  mobileHumanPose.h  pyvenv.cfg  utils_pose_estimation.cpp  utils_pose_estimation.h  yolo_fast.cpp  yolo_fast.h
